# boxlite

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  codecov.yml  snapshot-pause-resume-comparison.md
.cargo/: config.toml
.claude/hooks/: preflight-verdict-check.sh  preflight-verdict-check.test.sh
.github/workflows/: README.md  api-client-drift.yml  build-c.yml  build-runner-binary.yml  build-runtime.yml  e2e-local.yml  lint.yml  test.yml
apps/: go.work.sum  package.json
apps/api/: .env.example  project.json
apps/api-client-go/: api_admin.go  api_billing.go  api_box.go  api_preview.go  api_toolbox.go  client.go  configuration.go  go.mod  model_box.go  model_box_class.go  model_box_desired_state.go  model_box_info.go  model_box_state.go  model_create_box.go  model_create_snapshot.go  model_job_status.go  model_job_type.go  model_organization.go  model_port_preview_url.go  model_pty_create_request.go  model_pty_session_info.go  model_region_type.go  model_runner_state.go  model_signed_port_preview_url.go  model_snapshot_state.go  model_ssh_access_dto.go  model_toolbox_proxy_url.go  model_update_box_state_dto.go  model_volume_state.go  model_webhook_event.go  model_workspace.go  project.json
apps/api-client-go/.openapi-generator/: FILES
apps/api-client-go/api/: openapi.yaml
apps/api/src/: app.module.ts  main.ts
apps/api/src/admin/: admin.module.ts
apps/api/src/billing/: billing-edge-cases.integration.spec.ts  billing-events.ts  billing-ops.service.spec.ts  billing-ops.service.ts  billing-read.service.spec.ts  billing-read.service.ts  billing.controller.spec.ts  billing.controller.ts  billing.module.ts  settlement.service.spec.ts  settlement.service.ts  wallet.service.spec.ts  wallet.service.ts
apps/api/src/box/: box.module.ts
apps/api/src/boxlite-rest/: box-auto-resume.service.spec.ts  box-auto-resume.service.ts  boxlite-box.controller.ts  boxlite-config.controller.ts  boxlite-me.controller.ts  boxlite-proxy.controller.spec.ts  boxlite-proxy.controller.ts  boxlite-rest-routing.spec.ts  boxlite-rest.module.ts  boxlite-ws-proxy.service.spec.ts  boxlite-ws-proxy.service.ts
apps/api/src/config/: configuration.spec.ts  configuration.ts
apps/api/src/migrations/: 1741087887225-migration.ts
apps/api/src/usage/: usage.module.ts  usage.service.spec.ts
apps/dashboard/src/api/: apiClient.ts
apps/dashboard/src/billing-api/: billingApiClient.test.ts  billingApiClient.ts
apps/dashboard/src/lib/: billing-checkout.ts  cloudBox.test.ts  cloudBox.ts
apps/dashboard/src/pages/: Billing.test.tsx  Billing.tsx  Boxes.tsx
apps/infra/: .env.example  BILLING_PAYMENT_RUNBOOK.md  NETWORKING.md  README.md  sst-billing-config.test.mjs  sst.config.ts
apps/infra-local/: README.md  api.env
apps/libs/api-client/: project.json
apps/libs/api-client/src/: api.ts  configuration.ts  git_push.sh
apps/proxy/pkg/proxy/: get_box_target.go  proxy.go
apps/runner/: README.md
apps/runner/cmd/runner/: main.go
apps/runner/pkg/boxlite/: client.go  client_create_idempotent_test.go  stubs.go  volumes.go
apps/scripts/: billing-local-e2e.mjs  billing-stripe-sandbox-config.mjs  billing-stripe-sandbox-config.test.mjs  billing-stripe-sandbox-e2e.mjs  billing-stripe-sandbox-listener.mjs  billing-test-suite.mjs  e2e-dev-smoke.mjs
docs/: README.md
docs/architecture/: README.md  auto-pause-resume-design.md
docs/development/: cli.md
docs/getting-started/: quickstart-c.md
docs/guides/: README.md  auto-pause-resume.md
docs/reference/c/: README.md
examples/c/: CMakeLists.txt  README.md
make/: build.mk  coverage.mk  dev.mk  dist.mk  help.mk  quality.mk  test.mk  vars.mk
openapi/: box.openapi.yaml
openapi/reference-server/: server.py
scripts/: common.sh
scripts/test/e2e/: bootstrap.sh
scripts/test/stress/: api-create-box.k6.js  api-vm-lifecycle.k6.js
sdks/c/: Cargo.toml  README.md
sdks/c/include/: boxlite.h
sdks/c/src/: box_handle.rs  event_queue.rs  info.rs  lib.rs  network.rs  options.rs  runtime.rs  tests.rs  volumes.rs
sdks/go/: boxlite_test.go  bridge.c  bridge.h  bridge_callback.go  bridge_cgo_dev.go  bridge_cgo_prebuilt.go  get_or_create_integration_test.go  info.go  options.go  runtime.go  tunnel.go  tunnel_test.go  volumes.go
sdks/node/: Cargo.toml  package.json
sdks/node/lib/: index.ts  native-contracts.ts  simplebox.ts
sdks/node/src/: info.rs  lib.rs  options.rs  runtime.rs  volumes.rs
sdks/python/: Cargo.toml
sdks/python/boxlite/: __init__.py
sdks/python/src/: info.rs  lib.rs  options.rs  runtime.rs  volumes.rs
sdks/python/tests/: test_options.py
src/boxlite/: Cargo.toml  build.rs
src/boxlite/src/: lib.rs  system_check.rs
src/boxlite/src/db/: schema.rs
src/boxlite/src/disk/: ext4.rs
src/boxlite/src/jailer/: bwrap.rs  mod.rs  process_env.rs  shim_copy.rs
src/boxlite/src/litebox/: box_impl.rs  watcher.rs
src/boxlite/src/net/: socket_path.rs
src/boxlite/src/rest/: runtime.rs  types.rs
src/boxlite/src/runtime/: backend.rs  (+9 more)
src/boxlite/tests/: README.md  execution_shutdown.rs  health_check.rs  lifecycle.rs  mount_security.rs  network_spec.rs  recovery.rs  rest_integration.rs  run_main_command.rs  security_enforcement.rs  timing_profile.rs  zygote_integration.rs
src/cli/: Cargo.toml  README.md
src/cli/src/: cli.rs  main.rs
src/cli/src/commands/: create.rs  mod.rs  run.rs
src/cli/src/commands/serve/: mod.rs  types.rs
src/cli/src/commands/serve/handlers/: mod.rs  volumes.rs
src/cli/src/commands/volume/: create.rs  get.rs  ls.rs  mod.rs  rm.rs
src/cli/tests/: exec_mount_stability.rs  gvproxy_port_conflict.rs  run.rs
src/guest/: Cargo.toml
src/guest/.cargo/: config.toml
src/libgvproxy-sys/: Cargo.toml  build.rs
src/libgvproxy-sys/gvproxy-bridge/: config_build_test.go  forked_tcp.go  forked_tcp_test.go  go.mod  go.sum  main.go  mitm.go  tcp_filter.go  tcp_filter_test.go
src/shared/: Cargo.toml
src/shared/src/: constants.rs
src/shim/: Cargo.toml  build.rs
src/shim/.cargo/: config.toml
src/test-utils/: Cargo.toml
src/test-utils/src/: box_test.rs  cache.rs  config_matrix.rs  home.rs
(+421 files in other folders)
