[package]
name = "boxlite-c"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "C SDK for BoxLite"

[lints]
workspace = true
[lib]
name = "boxlite"
crate-type = ["cdylib", "staticlib"]

[features]
default = []

[dependencies]
boxlite = { workspace = true, features = ["rest"] }
futures = "0.3"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
boxlite = { workspace = true, features = ["rest"] }

[build-dependencies]
cbindgen = "0.29"
